updated lectures 1 and 2 and a bit of 3

--- a/assessments/lecture1.html
+++ b/assessments/lecture1.html
@@ -2,50 +2,43 @@
 
 <html>
   <head>
-    <link rel='stylesheet' href='style/style.css'>
-    <title>
-      Lecture 1 Assessment
-    </title>
+    <title>Lecture 1 Final</title>
   </head>
   <body>
-    <h1>
-      This is the Lecture 1 assessment
-    </h1>
-    <h2>
-      This text is not as large
-    </h2>
-    <h3>
-      This is even smaller
-    </h3>
-    <h4>
-      Even smaller yet
-    </h4>
-    <p>
-      This is just a straight up paragraph. The text just keeps on going and going and going... On the bottom of the page, there is a picture. This picture (as you will need to know) is located at https://pixabay.com/static/uploads/photo/2014/07/08/09/58/html5-386614__180.jpg. You will need that for when you make your version of this page.
-    </p>
+    <h1>This is the Lecture 1 assessment</h1>
+    <h2>This text is not as large</h2>
+    <h3>This is even smaller</h3>
+    <h4>Even smaller yet</h4>
+
+    <p>This is a paragraph complete with <b>bold text</b> and <em>everything</em>! I can't believe how long this paragraph is! OMGosh, this thing goes on forever. Does this guy just like hearing himself... type? Well, anyway, now that we're all here...</p>
+    <p>We can get started on the <em>second</em> paragraph! "Everything good requires effort" - The Illustrious Aaron Niskin. I think we're going to need a bigger quote.</p>
     <ul>
+      <li>First unordered list item</li>
+      <li>Second unordered list item</li>
+      <li>Third unordered list item</li>
       <li>
-        Check out <a href='http://aaron.niskin.org'>Aaron's website</a>!
-      </li>
-      <li>
-        The second thing
+        <ul>
+          <li>First unordered sublist item</li>
+          <li>Second unordered sublist item</li>
+          <li>Third unordered sublist item</li>
+        </ul>
       </li>
     </ul>
-    <div>
-      <ol>
-        <li>
-          first things here
-        </li>
-        <li>
-          The picture at the bottom of the page is at the address written below.
-        </li>
-        <li>
-          https://pixabay.com/static/uploads/photo/2014/07/08/09/58/html5-386614__180.jpg
-        </li>
-      </ol>
-      <img src='blackjack.JPG'
-           alt='random blackjack picture'>
-      <img src="https://pixabay.com/static/uploads/photo/2014/07/08/09/58/html5-386614__180.jpg" alt="random github picture">
-    </div>
+    <ol>
+      <li>First ordered list item</li>
+      <li>Second ordered list item</li>
+      <li>Third ordered list item</li>
+      <li>
+        <ol>
+          <li>First ordered sublist item</li>
+          <li>Second ordered sublist item</li>
+          <li><a href='aaron.niskin.org'>Third ordered sublist item</a></li>
+        </ol>
+      </li>
+    </ol>
+    <a href='aaron.niskin.org'><em>aaron</em>.niskin.org</a>
+    <h2><a href='aaron.niskin.org'>aaron.niskin.org</a></h2>
+    <img src='/img/linus-jet.png' alt="Linus Torvalds in a fighter jet">
   </body>
 </html>
+
