--- a/assessments/lecture3.html
+++ b/assessments/lecture3.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
+
 <html>
   <head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">
-    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/js/materialize.min.js"></script>
+    <link type='text/css' rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css'>
     <style>
       .box {
         height: 225px;
       }
     </style>
-    <title>
-      Lecture 3
-    </title>
   </head>
   <body>
     <div class='row'>
@@ -28,57 +24,23 @@
       </div>
       <div class='section'>
         <div class='row'>
-          <div class='col s6 green box'></div>
-          <div class='col s6 blue box'></div>
+          <div class='col s3 green box'></div>
+          <div class='col s2 blue box'></div>
+          <div class='col s3 green box'></div>
+          <div class='col s4 blue box'></div>
         </div>
         <div class='row'>
           <div class='col s6 blue box'></div>
-          <div class='col s6 green box'></div>
-          <div class='col s6 green box'></div>
-          <div class='col s6 blue box'></div>
+          <div class='col s3 green box'></div>
+          <div class='col s3 blue box'></div>
+        </div>
+        <div class='row'>
+          <div class='col s5 green box'></div>
+          <div class='col s1 blue box'></div>
+          <div class='col s2 green box'></div>
+          <div class='col s4 blue box'></div>
         </div>
       </div>
-      <!--div class='section'>
-        <div class='row'>
-          <div class='col s12 m6 blue box'></div>
-          <form class='col s12 m6'>
-            <div class='row'>
-              <div class='col s6 input-field'>
-                <input id='fn'
-                       type='text'>
-                <label for='fn'>First Name</label>
-              </div>
-              <div class='col s6 input-field'>
-                <input id='ln'
-                       type='text'>
-                <label for='ln'>Last Name</label>
-              </div>
-            </div>
-            <div class='row'>
-              <div class='col s12 input-field'>
-                <input id='email'
-                       type='text'>
-                <label for='email'>Email Address</label>
-              </div>
-            </div>
-            <div class='row'>
-              <div class='col s12 input-field'>
-                <input id='phone'
-                       type='text'>
-                <label for='phone'>Telephone Number</label>
-              </div>
-            </div>
-            <div class='row'>
-              <div class='col s12 input-field center'>
-                <button class='btn'
-                        type='submit'>
-                  Submit
-                </button>
-              </div>
-            </div>
-          </form>
-        </div>
-      </div-->
     </div>
   </body>
 </html>
