--- a/guides/lecture1.html
+++ b/guides/lecture1.html
@@ -24,7 +24,7 @@
             <span class='icon-bar'></span>
             <span class='icon-bar'></span>
           </button>
-          <a class='navbar-brand' href='#home'>L6: Odds or Evens</a>
+          <a class='navbar-brand' href='#home'>L1: HTML Basics</a>
         </div>
         <div class='collapse navbar-collapse' id='navbar-collapse-1'>
           <ul class='nav navbar-nav'>
