--- a/guides/lecture3.html
+++ b/guides/lecture3.html
@@ -24,7 +24,7 @@
             <span class='icon-bar'></span>
             <span class='icon-bar'></span>
           </button>
-          <a class='navbar-brand' href='#home'>L2: CSS Boxes</a>
+          <a class='navbar-brand' href='#home'>L3: CSS Frameworks</a>
         </div>
         <div class='collapse navbar-collapse' id='navbar-collapse-1'>
           <ul class='nav navbar-nav'>
